Fix input fields on LP last step on mobile

--- a/themes/gv_sky/css/sass/lpv10.sass
+++ b/themes/gv_sky/css/sass/lpv10.sass
@@ -73,6 +73,9 @@ main
   @media screen and (max-height: 669px)
     min-height: 993px - 210px
 
+  @media screen and (max-width: 414px)
+    height: 968px !important
+
   // .cc &
   //   background: url(../images/lpv10/bg-img2.jpg) 50% (50% / cover)
 
@@ -152,7 +155,7 @@ header
   position: relative
 
   @media screen and (max-width: 520px)
-    height: 116px
+    height: 108px
 
   .wrap
     width: 100%
@@ -368,6 +371,13 @@ form
 .title-first,
 .title-second
   padding-bottom: 50px
+
+.title-second
+  @media screen and (max-width: 520px)
+    padding-bottom: 30px
+
+    h1
+      padding-top: 25px
 
 .checkbox-input,
 .radio-input
@@ -732,6 +742,14 @@ form
   width: 49.1%
   float: left
   margin-top: 22px
+
+  @media screen and (max-width: 414px)
+    width: 100%
+    float: none
+    margin: 22px 0 0 !important
+
+    &:first-child
+      margin: 0 !important
 
 
 
